--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A read me file",
   "main": "App.js",
   "scripts": {
-    "start" : "parcel index.html",
+    "start": "parcel index.html",
     "build": "parcel build index.html ",
     "test": "Jest"
   },
@@ -19,17 +19,24 @@
   },
   "homepage": "https://github.com/Jesee-Avanakshi/react#readme",
   "devDependencies": {
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "constants-browserify": "^1.0.0",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "browserslist": [
     "last 2 Chrome versions"
   ]
-    
-  
-
 }
